<resources>
    <string name="app_name">                        My App</string>
    <string name="action_settings">                 Settings</string>
    <string name="search_contact">                  Search Contact</string>
    <string name="name_dialog">                     Name:</string>
    <string name="phone_dialog">                    Phone:</string>
    <string name="email_dialog">                    EMail:</string>
    <string name="country_dialog">                  Country:</string>
    <string name="cancel">                          Cancel</string>
    <string name="edit">                            Edit</string>
    <string name="Gender">                          Gender</string>
    <string name="firstNameActivity">               First Name</string>
    <string name="name_activity">                   Name</string>
    <string name="last_name_activity">              Last Name</string>
    <string name="country_activity">                Country</string>
    <string name="phone_number_activity">           Phone number</string>
    <string name="phone_activity">                  Phone</string>
    <string name="e_mail_activity">                 E Mail</string>
    <string name="email_activity">                  eMail</string>
    <string name="gender_activity">                 Gender</string>
    <string name="save_activity">                   Save</string>
    <string name="search_country_dialog">           Search Country</string>
    <string name="cancel_dialog">                   Cancel</string>
    <string name="country_name_dialog">             Country Name</string>
    <string name="contact_name_dialog">             Contact Name</string>
    <string name="contact_mail">                    Mail</string>
    <string name="contact_country">                 Country</string>
    <string name="contact_gender">                  Gender</string>
    <string name="contact_phone_dialog">            Contact phone</string>
    <string name="MSG_ENTER_VALID_FIRST_NAME">      Please enter a valid First Name</string>
    <string name="MSG_ENTER_VALID_LAST_NAME">       Please enter a valid Last Name</string>
    <string name="MSG_ENTER_VALID_EMAIL_ADDRESS">   Please enter a valid Email Address</string>
    <string name="MSG_ENTER_VALID_PHONE_NUMBER">    Please enter a valid Phone Number</string>
    <string name="MSG_ENTER_VALID_GENDER">          Please enter a Gender</string>
    <string name="MSG_SAVE_SUCCESSFUL">             Save Successful</string>
    <string name="MSG_OOPS">                        Oops. Something went wrong.</string>
    <string name="BTN_SAVE">                        Save</string>
    <string name="BTN_UPDATE">                      Update</string>
    <string name="BTN_EDIT">                        Edit</string>
    <string name="COUNTRY_DIALOG_TITLE">            Choice Country</string>
    <string name="CONTACT_DIALOG_TITLE">            Save Contact</string>
</resources>
